--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <h1 class="page-title">
               <a class="btn-bootstrap-2 title-scroll" href="#content">37º空间-个人博客</a>
           </h1>
-          <h2 class="page-description">this is my description</h2>
+          <h2 class="page-description">不忘初心，方得始终</h2>
         </div>
 </div>
     <a class="scroll-down icon-arrow-left" href="#content"><span class="hidden">Scroll Down</span></a>
