--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 	<h1>Welcome<p>SKY_ZJ</p><p>不忘初心，方得始终</p></h1>
     <a href="love.html" target="_blank">关于|Love</a>
     <a href="./blog/index.html" target="_blank">&nbsp;&nbsp;博客|Blog&nbsp;&nbsp;</a>
-	<a href="http://" target="_blank">关于|About</a>
+	<a href="./about/" target="_blank">关于|About</a>
 	<a href="http://wpa.qq.com/msgrd?v=3&amp;uin=391779508&amp;site=qq&amp;menu=yes" target="_blank">联系我|Contact me</a>
 
   </div>
